Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47379

QSettings doesn't work with Alternate Data Streams (ADS)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.10.0 Alpha, 5.10.0
    • 5.4.1
    • Core: Other
    • None
    • 66500b9d75cb895accfc385fd323f48c41b61a7a 4934138be29868bdf848e2aeb6c6163819ab3a5c

      With ADS in Windows, a stream can be opened for a file like "test.txt:ea.ini", so I can have some data that is visible in "test.txt" and other data that is "hidden" in the ADS "test.txt:ea.ini". I can see the "hidden" data by just opening the file with notepad and specifying "test.txt:ea.ini".
      QFile works just fine with ADS, and QSettings was working, but somewhere between Qt 4.8 and 5.4 this functionality was broken. If I create a QSettings object with "tests.txt:ea.ini", I will get an access error now. QFile still works fine.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            rtauber Richard Tauber
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes